--- a/openface2_bridge/CMakeLists.txt
+++ b/openface2_bridge/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 2.8.3)
-project(openface2_ros)
+project(openface2_bridge)
 
 find_package(catkin REQUIRED COMPONENTS
   message_generation
@@ -12,6 +12,7 @@ find_package(catkin REQUIRED COMPONENTS
   roscpp
   tf2
   tf2_ros
+  openface2_ros_msgs
 )
 
 find_package(Boost 1.5.9 REQUIRED COMPONENTS filesystem system)
@@ -26,9 +27,6 @@ set(OPENFACE_LIBS ${OPENFACE_LD_LIB} ${OPENFACE_FA_LIB} ${OPENFACE_GA_LIB} ${OPE
 
 find_path(OPENFACE_INCLUDE_DIR LandmarkDetectorModel.h PATH_SUFFIXES OpenFace)
 
-add_message_files(FILES ActionUnit.msg Face.msg Faces.msg)
-generate_messages(DEPENDENCIES std_msgs geometry_msgs)
-
 add_definitions(-std=c++11)
 add_definitions(-g -pg)
 
@@ -41,9 +39,12 @@ include_directories(
   ${Boost_INCLUDE_DIRS}/boost
   ${OpenCV_INCLUDE_DIRS}
 )
-add_executable(openface2_ros src/openface2_ros.cpp)
-add_dependencies(openface2_ros ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
-add_dependencies(openface2_ros openface2_ros_generate_messages_cpp)
+
+add_executable(openface2_ros 
+    src/openface2_ros.cpp
+)
+
+add_dependencies(openface2_ros ${catkin_EXPORTED_TARGETS})
 
 target_link_libraries(openface2_ros
   ${catkin_LIBRARIES}
@@ -58,4 +59,8 @@ install(TARGETS openface2_ros
   ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
   LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
   RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
+)
+
+install(DIRECTORY launch
+    DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
 )
