--- a/openface2_ros_msgs/package.xml
+++ b/openface2_ros_msgs/package.xml
@@ -15,6 +15,9 @@
   <build_depend>sensor_msgs</build_depend>
   <build_depend>message_generation</build_depend>
   <run_depend>message_runtime</run_depend>
+  <run_depend>std_msgs</run_depend>
+  <run_depend>geometry_msgs</run_depend>
+  <run_depend>sensor_msgs</run_depend>
 
   <export>
 
