--- a/openface2_bridge/package.xml
+++ b/openface2_bridge/package.xml
@@ -20,12 +20,14 @@
   <build_depend>tf2</build_depend>
   <build_depend>tf2_ros</build_depend>
   <build_depend>openface2_ros_msgs</build_depend>
+
   <run_depend>message_runtime</run_depend>
   <run_depend>roscpp</run_depend>
   <run_depend>image_transport</run_depend>
   <run_depend>cv_bridge</run_depend>
   <run_depend>tf2</run_depend>
   <run_depend>tf2_ros</run_depend>
+  <run_depend>package</run_depend>
   <run_depend>openface2_ros_msgs</run_depend>
 
 
