--- a/openface2_ros_msgs/CMakeLists.txt
+++ b/openface2_ros_msgs/CMakeLists.txt
@@ -11,6 +11,7 @@ find_package(catkin REQUIRED COMPONENTS
 add_message_files(
     FILES
     ActionUnit.msg
+    ActionUnits.msg
     Face.msg
     Faces.msg
 )
